--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/eldsmith/hopverkefni/issues"
   },
-  "homepage": "https://github.com/eldsmith/hopverkefni#readme"
+  "homepage": "https://github.com/eldsmith/hopverkefni#readme",
+  "dependencies": {
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "pug": "^2.0.0-beta6"
+  }
 }
