--- a/package.json
+++ b/package.json
@@ -24,8 +24,16 @@
   },
   "homepage": "https://github.com/eldsmith/hopverkefni#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "morgan": "^1.7.0",
+    "mysql": "^2.12.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
