Betri comment á config/passport

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ DB_PASSWORD=YOUR_MYSQL_PASSWORD
 FACEBOOK_APP_ID=YOUR_FACEBOOK_APP_ID
 FACEBOOK_SECRET=YOUR_FACEBOOK_SECRET
 
-#Optional variables
+#Optional
+#PORT defaults to 5000
 PORT=NODE_JS_PORT
