--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "browser-sync": "^2.18.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-load-plugins": "^1.4.0",
     "gulp-nodemon": "^2.2.1",
